--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,13 +2,24 @@
 
     <string name="app_name">GameJam</string>
     <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
+    <string name="title_dashboard">Profile</string>
     <string name="title_notifications">Notifications</string>
-    <string name="title_security">Password</string>
+    <string name="title_security">Security Data</string>
     <string name="title_change_security">Change Password</string>
     <string name="title_config">Configurations</string>
 
     <string name="lblPassword">Enter Your Password :</string>
     <string name="btn_submit">Submit</string>
+
+        <string-array name="country_array">
+            <item>Argentina</item>
+            <item>Índia</item>
+            <item>Austrália</item>
+            <item>Brasil</item>
+            <item>Estados Unidos</item>
+            <item>China</item>
+            <item>Canadá</item>
+            <item>Rússia</item>
+        </string-array>
 
 </resources>
